fix: changed the outer containers name to 'wrapper' to resolve overflow issues stemming from bootstrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,13 +23,13 @@ button {
   font-family: 'Quicksand', sans-serif;
 }
 
-.container {
+.wrapper {
     margin: 0;
     padding: 0;
 }
 
 @media screen and (max-aspect-ratio: 1/1) {
-    .container {
+    .wrapper {
         overflow: hidden;
     }
 }
